# a2pwn

./: .dockerignore  .gitignore  .gitmodules  ATTRIBUTION.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
skills/: build_index.py
skills/burpwn/: SKILL.md
skills/recon/content-discovery/: SKILL.md
skills/recon/js-supplychain/: SKILL.md  verify.py
skills/recon/tech-fingerprint/: SKILL.md
skills/web/access-control/: SKILL.md  verify.py
skills/web/authentication/: SKILL.md
skills/web/cache-deception/: SKILL.md  verify.py
skills/web/cache-poisoning/: SKILL.md  verify.py
skills/web/command-injection/: SKILL.md
skills/web/cors/: SKILL.md  verify.py
skills/web/csrf/: SKILL.md
skills/web/deserialization/: SKILL.md  verify.py
skills/web/file-upload/: SKILL.md
skills/web/graphql/: SKILL.md
skills/web/hop-by-hop/: SKILL.md  verify.py
skills/web/host-header/: SKILL.md  verify.py
skills/web/http2-desync/: SKILL.md  verify.py
skills/web/http3-quic/: SKILL.md  verify.py
skills/web/idor-bola/: SKILL.md  verify.py
skills/web/jwt-auth/: SKILL.md  verify.py
skills/web/ldap-xpath-injection/: SKILL.md
skills/web/nosql-injection/: SKILL.md
skills/web/open-redirect/: SKILL.md  verify.py
skills/web/path-traversal-lfi/: SKILL.md  verify.py
skills/web/prototype-pollution/: SKILL.md  verify.py
skills/web/race-condition/: SKILL.md  verify.py
skills/web/request-smuggling/: SKILL.md  verify.py
skills/web/sqli/: SKILL.md  payloads.yaml  verify.py
skills/web/ssrf/: SKILL.md  verify.py
skills/web/ssti/: SKILL.md  verify.py
skills/web/xss/: SKILL.md  payloads.yaml  verify.py
skills/web/xxe/: SKILL.md  verify.py
src/a2pwn/: __init__.py  _oob_listener.py  agents.py  backends.py  budget.py  burpwn.py  catalog.py  cli.py  collaborator.py  compaction.py  config.py  cvss.py  graph.py  installer.py  models.py  oracles.py  progress.py  prompts.py  report.py  runtime.py  scope.py  sdk_agent.py  tui.py
src/a2pwn/tools/: __init__.py  burpwn_tools.py  finding_tools.py  oracle_tools.py  recon_tools.py  registry.yaml
tests/: _graphkit.py  conftest.py  test_async_engagement.py  test_backends.py  test_budget.py  test_burpwn_limit.py  test_burpwn_stdio.py  test_capture_alarm.py  test_catalog.py  test_clarify_fan_out.py  test_clean_history.py  test_cli_gate.py  test_collaborator.py  test_compaction.py  test_config_validation.py  test_continuation_judge.py  test_cvss.py  test_finding_tools.py  test_installer.py  test_oracles.py  test_recon_seeding.py  test_recon_tools.py  test_reconciliation.py  test_reducers.py  test_report.py  test_route_dispatch.py  test_runtime.py  test_runtime_helpers.py  test_scope.py  test_sdk_agent.py  test_stateless_child.py  test_strip_nul.py  test_tls_passthru.py  test_verify_loop.py  test_workspace_name_id.py
