[project]
name = "a2pwn"
version = "0.1.0"
description = "Autonomous, evidence-grounded web-pentest orchestrator — a LangGraph master dispatches adversarially-verified sub-agents that drive all traffic through the burpwn sandbox."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "own2pwn", email = "contact@own2pwn.fr" }]
keywords = ["pentest", "security", "langgraph", "agent", "burpwn", "web-security", "appsec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

# Lean default install ("giga-simple"): the LangGraph kernel + the Claude Code
# subscription backend + the Anthropic API backend. Every other provider SDK is
# an optional extra and imported lazily by a2pwn.backends.make_model, so the base
# install stays small.
dependencies = [
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "aiosqlite>=0.20",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "claude-agent-sdk>=0.2",
    "pydantic>=2.7",
    "typer>=0.12",
    "anyio>=4.4",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2"]
aws = ["langchain-aws>=0.2"]
vertex = ["langchain-google-vertexai>=2.0"]
google = ["langchain-google-genai>=2.0"]
litellm = ["langchain-litellm>=0.1"]
postgres = ["langgraph-checkpoint-postgres>=2.0", "psycopg[binary]>=3.2"]
all = [
    "langchain-openai>=0.2",
    "langchain-aws>=0.2",
    "langchain-google-vertexai>=2.0",
    "langchain-google-genai>=2.0",
    "langchain-litellm>=0.1",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.2",
]

[project.scripts]
a2pwn = "a2pwn.cli:main"

[project.urls]
Homepage = "https://github.com/own2pwn-fr/a2pwn"
Repository = "https://github.com/own2pwn-fr/a2pwn"
Issues = "https://github.com/own2pwn-fr/a2pwn/issues"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2pwn"]

# Ship the seed skill library + tool registry inside the wheel.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "a2pwn/_skills"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]  # B008: typer Option() in defaults is idiomatic
